--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.11"
 protobuf = "^4.24.3"
 lmdb = "^1.4.1"
 typing-extensions = "^4.8.0"
+pymongo = "^4.5.0"
 
 
 [tool.poetry.group.dev.dependencies]
