--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ pymongo = "^4.5.0"
 isort = "^5.12.0"
 pylint = "^3.0.0"
 yapf = "^0.40.2"
+pre-commit = "^3.4.0"
 
 [tool.yapf]
 based_on_style = "google"
