--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ isort = "^5.12.0"
 pylint = "^3.0.0"
 yapf = "^0.40.2"
 pre-commit = "^3.4.0"
+pymongo-inmemory = "^0.3.1"
 
 [tool.yapf]
 based_on_style = "google"
