--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,12 +22,26 @@ pylint = "^3.0.0"
 yapf = "^0.40.2"
 pre-commit = "^3.4.0"
 pymongo-inmemory = "^0.3.1"
+pydocstyle = "^6.3.0"
 
 [tool.yapf]
 based_on_style = "google"
 
 [tool.isort]
 profile = "google"
+
+[tool.pydocstyle]
+convention = "google"
+add_ignore = [
+    "D100",
+    "D101",
+    "D102",
+    "D103",
+    "D104",
+    "D105",
+    "D106",
+    "D107",
+]
 
 [build-system]
 requires = ["poetry-core"]
