--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,14 +6,15 @@ authors = ["David Chiu <david20571015@gmail.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.11"
+python = ">=3.11,<3.12"
 protobuf = "^4.24.3"
 lmdb = "^1.4.1"
 typing-extensions = "^4.8.0"
 pymongo = "^4.5.0"
 chromadb = "^0.4.14"
-sentence-transformers = "^2.2.2"
-torch = ">=2.0.0, !=2.0.1, !=2.1.0"
+llama-index = "^0.9.10"
+transformers = "^4.35.2"
+torch = "^2.1.1"
 
 
 [tool.poetry.group.dev.dependencies]
