--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,11 @@ pymongo = "^4.5.0"
 chromadb = "^0.4.14"
 sentence-transformers = "^2.2.2"
 torch = ">=2.0.0, !=2.0.1, !=2.1.0"
+numpy = "^1.26.2"
+scikit-learn = "^1.3.2"
+selenium = "^4.15.2"
+beautifulsoup4 = "^4.12.2"
+requests = "^2.31.0"
 
 
 [tool.poetry.group.dev.dependencies]
