--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,9 +12,10 @@ lmdb = "^1.4.1"
 typing-extensions = "^4.8.0"
 pymongo = "^4.5.0"
 chromadb = "^0.4.14"
-llama-index = "^0.9.10"
+llama-index = "^0.10.11"
 transformers = "^4.35.2"
-torch = "^2.1.1"
+llama-index-vector-stores-chroma = "^0.1.3"
+llama-index-embeddings-huggingface = "^0.1.3"
 
 
 [tool.poetry.group.dev.dependencies]
