--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,6 @@
 # See https://pre-commit.com for more information
 # See https://pre-commit.com/hooks.html for more hooks
-exclude: "proto/"
+exclude: "protos/"
 
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
