--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,3 @@
-[project]
-requires-python = ">=3.11,<3.12"
-
-
 [tool.poetry]
 name = "sync-crawler"
 version = "0.1.0"
@@ -9,12 +5,9 @@ description = ""
 authors = ["David Chiu <david20571015@gmail.com>"]
 readme = "README.md"
 
-[tool.poetry.scripts]
-gen-protos = "sync_crawler.gen_protos:generate"
-
 [tool.poetry.dependencies]
 python = ">=3.11,<3.12"
-protobuf = "^5.27.0"
+protobuf = "^3.20.0"  # chroma needs the version of protobuf to 3.20.x or lower
 lmdb = "^1.4.1"
 typing-extensions = "^4.8.0"
 pymongo = "^4.5.0"
@@ -23,16 +16,13 @@ llama-index = "^0.10.11"
 transformers = "^4.35.2"
 llama-index-vector-stores-chroma = "^0.1.3"
 llama-index-embeddings-huggingface = "^0.1.3"
+pydantic = "^2.7.3"
 
 
 [tool.poetry.group.dev.dependencies]
 ruff = "0.4.7"
 pre-commit = "^3.4.0"
 pymongo-inmemory = "^0.3.1"
-
-
-[tool.poetry.group.proto.dependencies]
-grpcio-tools = "^1.64.0"
 
 
 [tool.ruff.lint]
