--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ python = "^3.12"
 lmdb = "^1.4.1"
 pymongo = "^4.5.0"
 pydantic = "^2.7.3"
+requests = "^2.32.3"
+beautifulsoup4 = "^4.12.3"
 
 [tool.poetry.group.chroma]
 optional = true
