--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,3 @@
-[project]
-requires-python = ">=3.12"
-
 [tool.poetry]
 name = "sync-crawler"
 version = "0.1.0"
@@ -10,26 +7,31 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.12"
-protobuf = "^3.20.0"  # chroma needs the version of protobuf to 3.20.x or lower
 lmdb = "^1.4.1"
 pymongo = "^4.5.0"
+pydantic = "^2.7.3"
+
+[tool.poetry.group.chroma]
+optional = true
+
+[tool.poetry.group.chroma.dependencies]
+protobuf = "^3.20.0"                          # chroma needs the version of protobuf to 3.20.x or lower
 chromadb = "^0.5.3"
 llama-index = "^0.10.11"
 transformers = "^4.35.2"
 llama-index-vector-stores-chroma = "^0.1.3"
 llama-index-embeddings-huggingface = "^0.2.2"
-pydantic = "^2.7.3"
 
+[tool.poetry.group.dev]
+optional = true
 
 [tool.poetry.group.dev.dependencies]
 ruff = "0.4.7"
 pre-commit = "^3.4.0"
 pymongo-inmemory = "^0.3.1"
 
-
 [tool.ruff.lint]
 extend-select = ["I"]
-
 
 [build-system]
 requires = ["poetry-core"]
