--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,8 +26,8 @@ llama-index-embeddings-huggingface = "^0.2.2"
 optional = true
 
 [tool.poetry.group.dev.dependencies]
-ruff = "0.4.7"
-pre-commit = "^3.4.0"
+ruff = "^0.6.2"
+pre-commit = "^3.8.0"
 pymongo-inmemory = "^0.3.1"
 
 [tool.ruff.lint]
