--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ pymongo = "^4.5.0"
 pydantic = "^2.7.3"
 requests = "^2.32.3"
 beautifulsoup4 = "^4.12.3"
+python-dateutil = "^2.9.0"
 
 [tool.poetry.group.chroma]
 optional = true
