--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,36 +1,29 @@
-[tool.poetry]
+[project]
 name = "sync-crawler"
 version = "0.1.0"
 description = ""
-authors = ["David Chiu <david20571015@gmail.com>"]
+authors = [{ name = "David Chiu", email = "david20571015@gmail.com" }]
+requires-python = "==3.12.*"
 readme = "README.md"
+dependencies = ["lmdb>=1.4.1,<2", "pymongo>=4.5.0,<5", "pydantic>=2.7.3,<3"]
 
-[tool.poetry.dependencies]
-python = "3.12.*"
-lmdb = "^1.4.1"
-pymongo = "^4.5.0"
-pydantic = "^2.7.3"
+[dependency-groups]
+vectordb = [
+    "llama-index>=0.11.19,<0.12",
+    "llama-index-vector-stores-qdrant>=0.3.2,<0.4",
+    "llama-index-embeddings-huggingface>=0.3.1,<0.4",
+    "qdrant-client>=1.12.0,<2",
+]
+dev = [
+    "ruff>=0.6.2,<0.7",
+    "pre-commit>=3.8.0,<4",
+    "pymongo-inmemory>=0.3.1,<0.4",
+]
 
-[tool.poetry.group.qdrant]
-optional = true
 
-[tool.poetry.group.qdrant.dependencies]
-llama-index = "^0.11.19"
-llama-index-vector-stores-qdrant = "^0.3.2"
-llama-index-embeddings-huggingface = "^0.3.1"
-qdrant-client = "^1.12.0"
-
-[tool.poetry.group.dev]
-optional = true
-
-[tool.poetry.group.dev.dependencies]
-ruff = "^0.6.2"
-pre-commit = "^3.8.0"
-pymongo-inmemory = "^0.3.1"
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
 
 [tool.ruff.lint]
 extend-select = ["I"]
-
-[build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
