--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,25 +5,28 @@ description = ""
 authors = [{ name = "David Chiu", email = "david20571015@gmail.com" }]
 requires-python = "==3.12.*"
 readme = "README.md"
-dependencies = ["lmdb>=1.4.1,<2", "pymongo>=4.5.0,<5", "pydantic>=2.7.3,<3"]
+dependencies = [
+    "lmdb>=1.6.2",
+    "pydantic>=2.10.6",
+    "pymongo>=4.11.1",
+]
 
 [dependency-groups]
 vectordb = [
-    "llama-index>=0.11.19,<0.12",
-    "llama-index-vector-stores-qdrant>=0.3.2,<0.4",
-    "llama-index-embeddings-huggingface>=0.3.1,<0.4",
-    "qdrant-client>=1.12.0,<2",
+    "llama-index~=0.12.17",
+    "llama-index-embeddings-huggingface~=0.5.1",
+    "llama-index-vector-stores-qdrant~=0.4.3",
+    "qdrant-client~=1.13.2",
 ]
 dev = [
-    "ruff>=0.6.2,<0.7",
-    "pre-commit>=3.8.0,<4",
-    "pymongo-inmemory>=0.3.1,<0.4",
+    "pre-commit==4.1.0",
+    "pymongo-inmemory==0.4.2",
+    "ruff==0.9.6",
 ]
 
+[tool.ruff.lint]
+extend-select = ["I", "UP"]
 
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
-
-[tool.ruff.lint]
-extend-select = ["I"]
