--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,15 +8,15 @@ readme = "README.md"
 dependencies = [
     "lmdb>=1.6.2",
     "pydantic>=2.10.6",
-    "pymongo>=4.11.1",
 ]
 
 [dependency-groups]
-vectordb = [
+database = [
     "llama-index~=0.12.17",
     "llama-index-embeddings-huggingface~=0.5.1",
     "llama-index-vector-stores-qdrant~=0.4.3",
     "qdrant-client~=1.13.2",
+    "pymongo>=4.11.1",
 ]
 dev = [
     "pre-commit==4.1.0",
