--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,14 +10,16 @@ dependencies = [
     "pydantic>=2.10.6",
 ]
 
-[dependency-groups]
+[project.optional-dependencies]
 database = [
-    "llama-index~=0.12.17",
-    "llama-index-embeddings-huggingface~=0.5.1",
-    "llama-index-vector-stores-qdrant~=0.4.3",
-    "qdrant-client~=1.13.2",
+    "llama-index>=0.12.23",
+    "llama-index-embeddings-huggingface>=0.5.2",
+    "llama-index-vector-stores-qdrant>=0.4.3",
     "pymongo>=4.11.1",
+    "qdrant-client>=1.13.3",
 ]
+
+[dependency-groups]
 dev = [
     "pre-commit==4.1.0",
     "pymongo-inmemory==0.4.2",
