--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ readme = "README.md"
 dependencies = [
     "lmdb>=1.6.2",
     "pydantic>=2.10.6",
+    "pydantic-settings>=2.8.1",
 ]
 
 [project.optional-dependencies]
