feat(dependencies): add llama-index-embeddings-huggingface for migration support in pyproject.toml and uv.lock

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ database = [
 ]
 migration = [
     "llama-index>=0.12.23",
+    "llama-index-embeddings-huggingface>=0.5.2",
     "llama-index-readers-mongodb>=0.3.0",
     "pymongo==4.6.*",
     "qdrant-client>=1.13.3",
